assets/css/guest.css
body {
  font-size: 16px;
  font-family: "Times New Roman", Times, serif;
}

.container {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: flex-start;
}

.signInCon {
  width: 30%;
  background-color: rgba(7, 151, 132, 0.7);
  color: white;
}

.logo {
  padding: 50px;
  font-family: "Rubik", sans-serif;

  .fa-solid {
    border: 1px solid white;
    padding: 3px;
  }
}

h1 {
  font-family: "Rubik", sans-serif;
}

.signInDetails {
  padding: 50px 0;
  text-align: center;

  p {
    width: 80%;
    margin-left: 35px;
    margin-bottom: 70px;
  }

  .signInBtn {
    background-color: inherit;
    border: none;
    display: inline-block;

    a {
      text-decoration: none;
      color: white;
      padding: 15px 50px;
      border-radius: 15px;
      border: 1px solid white;
      width: 80px;
    }

    :hover {
      background-color: white;
      color: green;
    }
  }
}

.signUpCon {
  width: 70%;
  background-color: white;
  color: rgb(128, 128, 128, 0.7);
  padding: 50px 0;
  text-align: center;

  h1 {
    color: rgba(7, 151, 132, 0.7);
  }
}

.signUpLogos {
  .fa-brands {
    border: 1px solid rgb(128, 128, 128, 0.5);
    border-radius: 50%;
    padding: 5px;
    color: black;
  }
}

.signUpData {
  margin-bottom: 20px;

  .fa-regular,
  .fa-solid {
    margin-top: 12px;
    position: absolute;
  }

  input {
    padding: 15px;
    width: 300px;
    background-color: rgb(128, 128, 128, 0.2);
    color: gray;
    border: none;
  }

  input::placeholder {
    padding: 10px;
  }
}

.signUpBtn {
  border: none;
  margin-top: 20px;
  color: white;
  padding: 15px 50px;
  border-radius: 15px;
  width: 80px;
  background-color: rgba(7, 151, 132, 0.7);
}

/* errors display */
.errors {
  border: 1px solid red;
  padding: 2rem;
  background-color: rgb(250, 8, 8, 0.5);
}
.errors > ul {
  list-style-type: none;
}

.errors > li {
  color: red;
}

